[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Enemy/Enemy_ske.json" type="GDDragonBonesResource" id=1]
[ext_resource path="res://Assets/Enemy/Enemy_tex.png" type="Texture" id=2]
[ext_resource path="res://src/Enemy/Enemy.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 28.0896

[sub_resource type="ParticlesMaterial" id=2]
flag_disable_z = true
direction = Vector3( 1, 1, 0 )
spread = 180.0
flatness = 1.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1000.0
initial_velocity_random = 0.93
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 100.0
linear_accel_random = 0.86
color = Color( 10, 0.7, 0, 1 )

[sub_resource type="CircleShape2D" id=3]
radius = 32.0

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 3 )

[node name="Sprite" type="GDDragonBones" parent="."]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )
resource = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Explode" type="Particles2D" parent="."]
scale = Vector2( 0.1, 0.1 )
emitting = false
amount = 20
one_shot = true
explosiveness = 1.0
randomness = 1.0
process_material = SubResource( 2 )
texture = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 2

[node name="Collision" type="CollisionShape2D" parent="PlayerDetector"]
shape = SubResource( 3 )
[connection signal="timeout" from="Timer" to="." method="_kill_myself"]
[connection signal="body_entered" from="PlayerDetector" to="." method="_player_detected"]
